# reasoning

./: .gitignore  README.md  pyproject.toml  run_all_experiments.py  run_eval_nohup.sh  run_evals_only.slurm  run_experiments.slurm
.ipynb_checkpoints/: run_eval_nohup-checkpoint.sh
configs/: dpo_backward_only.yaml  dpo_forward_only.yaml  dpo_forward_smoke.yaml  dpo_hybrid.yaml  dpo_llama32.yaml  dpo_tiny_debug.yaml  dpo_tiny_smoke.yaml  env.example  eval_backward_only.yaml  eval_baseline.yaml  eval_forward_only.yaml  eval_gsm8k.yaml  eval_hybrid.yaml
configs/experiments/: README.md  eval_all_models.yaml  train_backward_only.yaml  train_baseline.yaml  train_forward_only.yaml  train_hybrid_50_50.yaml  train_hybrid_60_40.yaml  train_hybrid_80_20.yaml
data/processed/: backward_reasoning.jsonl
data/prompts/: backward_template.txt  forward_template.txt
experiment_outputs/: checkpoint.json  final_results.json  temp_eval_config.yaml
experiment_outputs/data/: dpo_pairs.jsonl
experiment_outputs/evals/: baseline.json  baseline.predictions.json  (+3 more)
notebooks/: eval_comparison.ipynb
papers/: hybrid_dpo_acm.aux  hybrid_dpo_acm.out  hybrid_dpo_acm.tex  hybrid_dpo_arxiv.aux  hybrid_dpo_arxiv.bbl  hybrid_dpo_arxiv.blg  hybrid_dpo_arxiv.out  hybrid_dpo_arxiv.tex  hybrid_dpo_slides.tex  references.bib
scripts/: analyze_results.py  bootstrap_pairs.py  compare_traces.py  download_model.py  eval_all_models.py  eval_reasoning.py  fix_adapter_config.py  generate_dpo_pairs.py  run_experiments.sh  train_dpo.py  visualize_results.py
tests/: test_oc_utils.py  test_text_extraction.py
(+34 files in other folders)
